Complete second section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="stylesheets/reset.css" type="text/css">
-    <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="images/icon.svg" />
+  <title>Development Dynamics</title>
+  <link rel="stylesheet" href="stylesheets/reset.css" type="text/css">
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
+</head>
+
+<body>
+  <div class="full-viewport">
+    <header class="container">
+      <nav id="navbar">
+        <img id="logo" src="images/logo.svg" alt="Development Dynamics Logo">
+        <div id="nav-links">
+          <a href="#contact">contact</a>
+          <a href="#portfolio">portfolio</a>
+        </div>
+      </nav>
+    </header>
+    <section class="container" id="first-section">
+      <h1>We design service lifecycle, business plans, and help your business make insightful decisions.</h1>
+      <a href="#">What Have We Worked On?</a>
+    </section>
+  </div>
+  <div id="second-section">
+    <section class="container">
+      <h2>We help you consider all variables of a decision<span class="dot"></span><span class="dot"></span><span
+          class="dot"></span><span class="dot"></span>
+      </h2>
+      <p>At development dynamics we value strategic decisions alot.
+        Founded by a member of International Committee for Multi-Criteria Decision
+        Making, we consider ourselves decision advisors and experts who can
+        help multiple parties come to a decision strategically.</p>
+      <div id="sec-btn-div">
+        <button class="btn btn-alt" id="sec-btn-pub">Published Papers</button>
+        <button class="btn" id="sec-btn-book">Book A Decision Consultation</button>
+      </div>
+    </section>
+  </div>
+  <section class="container" id="portfolio">
+    <h2>PORTFOLIO</h2>
+    <section class="port-container">
+      <div class="hpd-img-div">
+        <div class="heading-p-div">
+          <div>
+            <h3>Decision Mentor</h3>
+            <p>Decision mentor is a personal decision support mobile
+              application, currently developed by development dynamics
+              in partnership with truenary solutions. It </p>
+          </div>
+          <button class="btn btn-alt">Explore Decision Mentor</button>
+        </div>
+        <img src="images/stub.svg" alt="">
+      </div>
+    </section>
+    <section class="port-container">
+      <div class="hpd-img-div alter-img-hpd">
+        <div class="heading-p-div">
+          <div>
+            <h3>Decision Mentor</h3>
+            <p>Decision mentor is a personal decision support mobile
+              application, currently developed by development dynamics
+              in partnership with truenary solutions. It </p>
+          </div>
+          <button class="btn btn-alt">Explore Decision Mentor</button>
+        </div>
+        <img src="images/stub.svg" alt="">
+      </div>
+    </section>
+    <section class="port-container">
+      <div class="hpd-img-div">
+        <div class="heading-p-div">
+          <div>
+            <h3>Decision Mentor</h3>
+            <p>Decision mentor is a personal decision support mobile
+              application, currently developed by development dynamics
+              in partnership with truenary solutions. It </p>
+          </div>
+          <button class="btn btn-alt">Explore Decision Mentor</button>
+        </div>
+        <img src="images/stub.svg" alt="">
+      </div>
+    </section>
+  </section>
+  <section class="container">
+    <h2>ABOUT US</h2>
+    <section>
+      <img href="#" alt="">
+      <p>Info on person</p>
+    </section>
+    <section>
+      <img href="#" alt="">
+      <p>Info on person</p>
+    </section>
+  </section>
+  <footer class="container" id="contact">
+    <h2>WANT TO WORK WITH US?</h2>
+    <a href="mailto:developmentdynamics@gmail.com"><button class="btn">Contact Development Dynamics</button></a>
+    <p>Click the button above, and send us an quick email.
+      We will get to you as soon as possible.</p>
+  </footer>
+</body>
+
 </html>
