Initial design without responsiveness &  small device compatablity

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <img id="logo" src="images/logo.svg" alt="Development Dynamics Logo">
         <div id="nav-links">
           <a href="#contact">contact</a>
-          <a href="#portfolio">portfolio</a>
+          <a href="#third-section">portfolio</a>
         </div>
       </nav>
     </header>
     <section class="container" id="first-section">
       <h1>We design service lifecycle, business plans, and help your business make insightful decisions.</h1>
-      <a href="#">What Have We Worked On?</a>
+      <a href="#third-section">What Have We Worked On?</a>
     </section>
   </div>
   <div id="second-section">
@@ -41,68 +41,109 @@
       </div>
     </section>
   </div>
-  <section class="container" id="portfolio">
-    <h2>PORTFOLIO</h2>
-    <section class="port-container">
-      <div class="hpd-img-div">
-        <div class="heading-p-div">
-          <div>
-            <h3>Decision Mentor</h3>
-            <p>Decision mentor is a personal decision support mobile
-              application, currently developed by development dynamics
-              in partnership with truenary solutions. It </p>
+  <div id="third-section">
+    <section class="container" id="port-section">
+      <h2 id="portfolio-h2">PORTFOLIO</h2>
+      <section class="port-container">
+        <div class="hpd-img-div">
+          <div class="heading-p-div">
+            <div>
+              <h3>Decision Mentor</h3>
+              <p>Decision mentor is a personal decision support mobile
+                application, currently developed by development dynamics
+                in partnership with truenary solutions. It </p>
+            </div>
+            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
           </div>
-          <button class="btn btn-alt">Explore Decision Mentor</button>
+          <img src="images/stub.svg" alt="">
         </div>
-        <img src="images/stub.svg" alt="">
+      </section>
+      <section class="port-container">
+        <div class="hpd-img-div alter-img-hpd">
+          <div class="heading-p-div">
+            <div>
+              <h3>Decision Mentor</h3>
+              <p>Decision mentor is a personal decision support mobile
+                application, currently developed by development dynamics
+                in partnership with truenary solutions. It </p>
+            </div>
+            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
+          </div>
+          <img src="images/stub.svg" alt="">
+        </div>
+      </section>
+      <section class="port-container">
+        <div class="hpd-img-div">
+          <div class="heading-p-div">
+            <div>
+              <h3>Decision Mentor</h3>
+              <p>Decision mentor is a personal decision support mobile
+                application, currently developed by development dynamics
+                in partnership with truenary solutions. It Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Sed quam arcu, vulputate nec enim a,
+                ornare facilisis elit. Aliquam erat volutpat.
+                Sed sollicitudin nisl ipsum, vitae rhoncus lorem tempor nec.
+                Morbi eget rutrum tellus, non lacinia arcu. Proin eget eleifend liber</p>
+            </div>
+            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
+          </div>
+          <img src="images/stub.svg" alt="">
+        </div>
+      </section>
+    </section>
+  </div>
+  <div id="fourth-section">
+    <section class="container" id="about-container">
+      <h2 id="about-us">ABOUT US</h2>
+      <div id=two-plp>
+        <section class="person-container" id="fir-person">
+          <div class="img-txt-about">
+            <div class="about-image">
+              <img src="images/small-stub.svg" alt="">
+            </div>
+            <div class="about-text">
+              <p class="cmp-title">Founder</p>
+              <p class="name">Shashi Bhattarai</p>
+              <p class="job">Decision Strategy Expert.</p>
+              <p class="description">Shashi is a decision strategy expert, andsad
+                Sed quam arcu, vulputate nec enim aornare facilisis elit. Sed quam arcu,
+                vulputate nec enim a,ornare facilisis elit.
+
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="person-container" id="sec-person">
+          <div class="img-txt-about">
+            <div class="about-image">
+              <img src="images/small-stub.svg" alt="">
+            </div>
+            <div class="about-text">
+              <p class="name">Arth Bhattarai</p>
+              <p class="job">Product & Service Designer.</p>
+              <p class="description">Arth is a trained product and service
+                designer, who works on generating value
+                of a business through strategic design of
+                a business's lifecycle.
+              </p>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
-    <section class="port-container">
-      <div class="hpd-img-div alter-img-hpd">
-        <div class="heading-p-div">
-          <div>
-            <h3>Decision Mentor</h3>
-            <p>Decision mentor is a personal decision support mobile
-              application, currently developed by development dynamics
-              in partnership with truenary solutions. It </p>
-          </div>
-          <button class="btn btn-alt">Explore Decision Mentor</button>
+    <footer class="container" id="contact">
+      <h2>WANT TO WORK WITH US?</h2>
+      <div class="btn-p-container">
+        <a href="mailto:developmentdynamics@gmail.com">"<button class="btn btn-biggest">Contact Development
+            Dynamics</button></a>
+        <div id="btn-endnote">
+          <p>Click the button above, and send us an quick email.
+            We will get to you as soon as possible.</p>
         </div>
-        <img src="images/stub.svg" alt="">
       </div>
-    </section>
-    <section class="port-container">
-      <div class="hpd-img-div">
-        <div class="heading-p-div">
-          <div>
-            <h3>Decision Mentor</h3>
-            <p>Decision mentor is a personal decision support mobile
-              application, currently developed by development dynamics
-              in partnership with truenary solutions. It </p>
-          </div>
-          <button class="btn btn-alt">Explore Decision Mentor</button>
-        </div>
-        <img src="images/stub.svg" alt="">
-      </div>
-    </section>
-  </section>
-  <section class="container">
-    <h2>ABOUT US</h2>
-    <section>
-      <img href="#" alt="">
-      <p>Info on person</p>
-    </section>
-    <section>
-      <img href="#" alt="">
-      <p>Info on person</p>
-    </section>
-  </section>
-  <footer class="container" id="contact">
-    <h2>WANT TO WORK WITH US?</h2>
-    <a href="mailto:developmentdynamics@gmail.com"><button class="btn">Contact Development Dynamics</button></a>
-    <p>Click the button above, and send us an quick email.
-      We will get to you as soon as possible.</p>
-  </footer>
+    </footer>
+  </div>
+  <footer id="copyright">All Rights Reserved, Development Dynamics Private Limited, 2021.</footer>
 </body>
 
 </html>
