Smaller screen support; require minor design & size changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section class="port-container">
         <div class="hpd-img-div alter-img-hpd">
-          <div class="heading-p-div">
+          <div class="heading-p-div alt-heading-p-div ">
             <div>
               <h3>Decision Mentor</h3>
               <p>Decision mentor is a personal decision support mobile
