--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="images/icon.svg" />
   <title>Development Dynamics</title>
   <link rel="stylesheet" href="stylesheets/reset.css" type="text/css">
@@ -11,139 +11,146 @@
 </head>
 
 <body>
-  <div class="full-viewport">
-    <header class="container">
-      <nav id="navbar">
-        <img id="logo" src="images/logo.svg" alt="Development Dynamics Logo">
-        <div id="nav-links">
-          <a href="#contact">contact</a>
-          <a href="#third-section">portfolio</a>
-        </div>
-      </nav>
-    </header>
-    <section class="container" id="first-section">
-      <h1>We design service lifecycle, business plans, and help your business make insightful decisions.</h1>
-      <a href="#third-section">What Have We Worked On?</a>
-    </section>
-  </div>
-  <div id="second-section">
-    <section class="container">
-      <h2>We help you consider all variables of a decision<span class="dot"></span><span class="dot"></span><span
-          class="dot"></span><span class="dot"></span>
-      </h2>
-      <p>At development dynamics we value strategic decisions alot.
-        Founded by a member of International Committee for Multi-Criteria Decision
-        Making, we consider ourselves decision advisors and experts who can
-        help multiple parties come to a decision strategically.</p>
-      <div id="sec-btn-div">
-        <button class="btn btn-alt" id="sec-btn-pub">Published Papers</button>
-        <button class="btn" id="sec-btn-book">Book A Decision Consultation</button>
-      </div>
-    </section>
-  </div>
-  <div id="third-section">
-    <section class="container" id="port-section">
-      <h2 id="portfolio-h2">PORTFOLIO</h2>
-      <section class="port-container">
-        <div class="hpd-img-div">
-          <div class="heading-p-div">
-            <div>
-              <h3>Decision Mentor</h3>
-              <p>Decision mentor is a personal decision support mobile
-                application, currently developed by development dynamics
-                in partnership with truenary solutions. It </p>
-            </div>
-            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
+  <div class="body-wrapper">
+    <div class="full-viewport">
+      <header class="container">
+        <nav id="navbar">
+          <img id="logo" src="images/logo.svg" alt="Development Dynamics Logo">
+          <div class="nav-links">
+            <a href="#contact">contact</a>
+            <a href="#third-section">portfolio</a>
           </div>
-          <img src="images/stub.svg" alt="">
+          <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
+        </nav>
+      </header>
+      <section class="container" id="first-section">
+        <h1>We design service lifecycle, business plans, and help your business make insightful decisions.</h1>
+        <a href="#third-section">What Have We Worked On?</a>
+      </section>
+    </div>
+    <div id="second-section">
+      <section class="container">
+        <h2>We help you consider all variables of a decision...</h2>
+        <p>At development dynamics we value strategic decisions alot.
+          Founded by a member of International Committee for Multi-Criteria Decision
+          Making, we consider ourselves decision advisors and experts who can
+          help multiple parties come to a decision strategically.</p>
+        <div id="sec-btn-div">
+          <a href="https://scholar.google.com/citations?user=ShspvvkAAAAJ&hl=en" target="_blank"><button
+              class="btn btn-alt" id="sec-btn-pub">Published Papers</button></a>
+          <button class="btn" id="sec-btn-book">Book A Decision Consultation</button>
         </div>
       </section>
-      <section class="port-container">
-        <div class="hpd-img-div alter-img-hpd">
-          <div class="heading-p-div alt-heading-p-div ">
-            <div>
-              <h3>Decision Mentor</h3>
-              <p>Decision mentor is a personal decision support mobile
-                application, currently developed by development dynamics
-                in partnership with truenary solutions. It </p>
+    </div>
+    <div id="third-section">
+      <section class="container" id="port-section">
+        <h2 id="portfolio-h2">PORTFOLIO</h2>
+        <section class="port-container">
+          <div class="hpd-img-div">
+            <div class="heading-p-div">
+              <div>
+                <h3>Decision Mentor</h3>
+                <p>Decision mentor is a personal decision support mobile
+                  application, currently developed by development dynamics
+                  in partnership with truenary solutions. It </p>
+              </div>
+              <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
             </div>
-            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
+            <img src="images/stub.svg" alt="">
           </div>
-          <img src="images/stub.svg" alt="">
-        </div>
-      </section>
-      <section class="port-container">
-        <div class="hpd-img-div">
-          <div class="heading-p-div">
-            <div>
-              <h3>Decision Mentor</h3>
-              <p>Decision mentor is a personal decision support mobile
-                application, currently developed by development dynamics
-                in partnership with truenary solutions. It Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Sed quam arcu, vulputate nec enim a,
-                ornare facilisis elit. Aliquam erat volutpat.
-                Sed sollicitudin nisl ipsum, vitae rhoncus lorem tempor nec.
-                Morbi eget rutrum tellus, non lacinia arcu. Proin eget eleifend liber</p>
+        </section>
+        <section class="port-container">
+          <div class="hpd-img-div alter-img-hpd">
+            <div class="heading-p-div alt-heading-p-div ">
+              <div>
+                <h3>Decision Mentor</h3>
+                <p>Decision mentor is a personal decision support mobile
+                  application, currently developed by development dynamics
+                  in partnership with truenary solutions. It </p>
+              </div>
+              <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
             </div>
-            <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
+            <img src="images/stub.svg" alt="">
           </div>
-          <img src="images/stub.svg" alt="">
-        </div>
-      </section>
-    </section>
-  </div>
-  <div id="fourth-section">
-    <section class="container" id="about-container">
-      <h2 id="about-us">ABOUT US</h2>
-      <div id=two-plp>
-        <section class="person-container" id="fir-person">
-          <div class="img-txt-about">
-            <div class="about-image">
-              <img src="images/small-stub.svg" alt="">
+        </section>
+        <section class="port-container">
+          <div class="hpd-img-div">
+            <div class="heading-p-div">
+              <div>
+                <h3>Decision Mentor</h3>
+                <p>Decision mentor is a personal decision support mobile
+                  application, currently developed by development dynamics
+                  in partnership with truenary solutions. It Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit. Sed quam arcu, vulputate nec enim a,
+                  ornare facilisis elit. Aliquam erat volutpat.
+                  Sed sollicitudin nisl ipsum, vitae rhoncus lorem tempor nec.
+                  Morbi eget rutrum tellus, non lacinia arcu. Proin eget eleifend liber</p>
+              </div>
+              <button class="btn btn-alt btn-bigger">Explore Decision Mentor</button>
             </div>
-            <div class="about-text">
-              <p class="cmp-title">Founder</p>
-              <p class="name">Shashi Bhattarai</p>
-              <p class="job">Decision Strategy Expert.</p>
-              <p class="description">Shashi is a decision strategy expert, andsad
-                Sed quam arcu, vulputate nec enim aornare facilisis elit. Sed quam arcu,
-                vulputate nec enim a,ornare facilisis elit.
+            <img src="images/decision.png" alt="">
+          </div>
+        </section>
+      </section>
+    </div>
+    <div id="fourth-section">
+      <section class="container" id="about-container">
+        <h2 id="about-us">ABOUT US</h2>
+        <div id=two-plp>
+          <section class="person-container" id="fir-person">
+            <div class="img-txt-about">
+              <div class="about-image">
+                <img src="images/small-stub.svg" alt="">
+              </div>
+              <div class="about-text">
+                <p class="cmp-title">Founder</p>
+                <p class="name">Shashi Bhattarai</p>
+                <p class="job">Decision Strategy Expert.</p>
+                <p class="description">Shashi is a decision strategy expert, andsad
+                  Sed quam arcu, vulputate nec enim aornare facilisis elit. Sed quam arcu,
+                  vulputate nec enim a,ornare facilisis elit.
 
-              </p>
+                </p>
+              </div>
             </div>
-          </div>
-        </section>
-        <section class="person-container" id="sec-person">
-          <div class="img-txt-about">
-            <div class="about-image">
-              <img src="images/small-stub.svg" alt="">
+          </section>
+          <section class="person-container" id="sec-person">
+            <div class="img-txt-about">
+              <div class="about-image">
+                <img src="images/human1.jpeg" alt="">
+              </div>
+              <div class="about-text">
+                <p class="name">Arth Bhattarai</p>
+                <p class="job">Product & Service Designer.</p>
+                <p class="description">Arth is a trained product and service
+                  designer, who works on generating value
+                  of a business through strategic design of
+                  a business's lifecycle.
+                </p>
+              </div>
             </div>
-            <div class="about-text">
-              <p class="name">Arth Bhattarai</p>
-              <p class="job">Product & Service Designer.</p>
-              <p class="description">Arth is a trained product and service
-                designer, who works on generating value
-                of a business through strategic design of
-                a business's lifecycle.
-              </p>
-            </div>
-          </div>
-        </section>
-      </div>
-    </section>
-    <footer class="container" id="contact">
-      <h2>WANT TO WORK WITH US?</h2>
-      <div class="btn-p-container">
-        <a href="mailto:developmentdynamics@gmail.com">"<button class="btn btn-biggest">Contact Development
-            Dynamics</button></a>
-        <div id="btn-endnote">
+          </section>
+        </div>
+      </section>
+      <footer class="container" id="contact">
+        <h2>WANT TO WORK WITH US?</h2>
+        <div class="end-btn-container">
+          <a href="mailto:developmentdynamics@gmail.com">"<button class="btn btn-biggest">Contact Development
+              Dynamics</button></a>
+        </div>
+        <div id="endnote">
           <p>Click the button above, and send us an quick email.
             We will get to you as soon as possible.</p>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
+    <footer id="copyright">All Rights Reserved, Development Dynamics Private Limited, 2021.</footer>
   </div>
-  <footer id="copyright">All Rights Reserved, Development Dynamics Private Limited, 2021.</footer>
+  <script src="scripts/app.js"></script>
 </body>
 
 </html>
