--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="body-wrapper">
+    <div id="overlay"></div>
     <div class="full-viewport">
       <header class="container">
         <nav id="navbar">
